calendar: Fix focus keynav
This broke when the calendar was broken into widgets.

--- a/gtk/theme/Adwaita/_common.scss
+++ b/gtk/theme/Adwaita/_common.scss
@@ -3472,6 +3472,13 @@ calendar {
       }
     }
 
+    > label:focus {
+      outline-color: $focus_border_color;
+      outline-offset: -2px;
+      outline-width: 2px;
+      outline-style: solid;
+    }
+
     > label.day-number {
       padding: 4px;
 
